--- a/views/modal_ajout_ba.pug
+++ b/views/modal_ajout_ba.pug
@@ -11,13 +11,13 @@ div.modal.modal-id(id='modalAjoutBa')
           form(action='/admin/bar/add')#createBa
             .form-group
               label Nom
-              input#nameAdd.form-control(type='text', placeholder='Nom')
+              input#nameAdd.form-control(type='text')
             .form-group
               label Picto
-              input#pictoAdd.form-control(type='text', placeholder='Picto')
+              input#pictoAdd.form-control(type='text')
             .form-group
               label Chiffres
-              input#numbersAdd.form-control(type='text', placeholder='Chiffres')
+              input#numbersAdd.form-control(type='text')
             button#btnAddBa.btn.btn-primary(type='submit',  data-dismiss='modal') Envoyer
         |
         .modal-footer
