--- a/views/modal_ajout_contact.pug
+++ b/views/modal_ajout_contact.pug
@@ -8,21 +8,21 @@ div.modal.modal-id(id='modalAjoutContact')
             span(aria-hidden='true') &times;
         |
         .modal-body
-          form(method='POST', action='/admin/contact/add')
+          form(action='/admin/contact/add')#createCon
             .form-group
               label Horaires
-              input.form-control(type='text', name='horairesAdd')
+              input#horAdd.form-control(type='text')
             .form-group
               label Adresse
-              input.form-control(type='text', name='adresseAdd')
+              input#adrAdd.form-control(type='text')
             .form-group
               label Tél
-              input.form-control(type='text', name='telAdd')
+              input#telAdd.form-control(type='text')
               .form-group
               label Mail
-              input.form-control(type='text', name='mailAdd')
+              input#mailAdd.form-control(type='text')
             |
-            button.btn.btn-primary(type='submit') Envoyer
+            button#btnAddCon.btn.btn-primary(type='submit', data-dismiss='modal') Envoyer
         |
         .modal-footer
           button.btn.btn-secondary(type='button', data-dismiss='modal') Fermer
