chgt href logo wild scroll

--- a/views/nav.pug
+++ b/views/nav.pug
@@ -1,7 +1,7 @@
 // BARRE DE NAVIGATION
 nav.navbar.navbar-expand-lg.fixed-top.navbar-light.cl-effect-5
   .container.position-relative
-    a#log.navbar-brand(href='#')
+    a#log.navbar-brand(href='/')
       if page == 'recruteur'
         img.img-fluid(src='images/logo-recrut.jpg' alt='logo')
       else
