correction bug Coralie

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -27,6 +27,7 @@ head
     script.
       tinymce.init({ selector:'textarea' })
     script(src='javascripts/slick.js', type='text/javascript', charset='utf-8')
+    script(src='javascripts/moment.js', type='text/javascript', charset='utf-8', async='', defer='')
     script(src='javascripts/script-admin.js', type='text/javascript', charset='utf-8', async='', defer='')
     script(src='javascripts/script-ajax.js', type='text/javascript', charset='utf-8', async='', defer='')
     script(src='javascripts/script.js', type='text/javascript', charset='utf-8', async='', defer='')
