--- a/views/admin.pug
+++ b/views/admin.pug
@@ -32,5 +32,4 @@ block content
           include admin_miss.pug
           include admin_collab.pug
           include admin_contact.pug
-          #contentValidation.divs
-            include validation.pug
+          include admin_valid.pug
