changez moi de groupe svp

--- a/views/concept2.pug
+++ b/views/concept2.pug
@@ -12,7 +12,7 @@
     h1.text-center.text-justify Team
     .row
       .col-12.col-md-4
-        h4.text-center Ce qu'ils disent sur l'équie
+        h4.text-center Ce qu'ils disent sur l'équipe
         p
           | A Wild Not You, on ne s’ennuie quasiment jamais. Il y a toujours un quête à déchiffrer ou des amis à aider.
           | Et sinon, le vendredi c'est apéro, d'habitude c'est Coralie et Julien qui invitent.
