accente sur language souhaité

--- a/views/video_header.pug
+++ b/views/video_header.pug
@@ -11,7 +11,7 @@ header#header
           .col-12.col-lg-6.offset-lg-3.text-center
             form.search_bar(action='/emploi/search' method='post')
               .input-group
-                input.custom-select(type='text' name="poste", placeholder="Language souhaite")
+                input.custom-select(type='text' name="poste", placeholder="Language souhaité")
               .input-group
                 select.custom-select(name='Dpt')
                   option(value='') France entiere
