modif view confir_emploi

--- a/views/confirm_emploi.pug
+++ b/views/confirm_emploi.pug
@@ -8,9 +8,9 @@ block content
           .row.container
             .col-5.offset-2.txt_confirm
                 div
-                    p Wild Not You vous remercie de proposer une nouvelle missions. Nous vous confirmons que l'envoi s'est bel et bien passé. 
-                    p Notre administrateur vient d'être averti par mail. Apres éxamination de cette missions, elle sera publiée sur le site dans les plus brefs délais. 
-                    p Pour toutes autres demandes, vous trouverez les liens de contact dans le pied de page
+                    p Wild Not You vous remercie de proposer une nouvelle mission. Nous vous confirmons que l'envoi a bien été effectué. 
+                    p Notre administrateur vient d'être averti par mail. Après examination de cette mission, elle sera publiée sur le site dans les plus brefs délais. 
+                    p Pour toutes autres demandes, vous trouverez les liens de contact dans le pied de page.
                         
                 div
                     <a href="/" class="btn btn-primary btn-md active btn_confirm_emploi" role="button" aria-pressed="true">Retour à l'acceuil</a>
