pb scripts regle

--- a/views/nav.pug
+++ b/views/nav.pug
@@ -3,9 +3,9 @@ nav.navbar.navbar-expand-lg.fixed-top.navbar-light.cl-effect-5
   .container.position-relative
     a#log.navbar-brand(href='/')
       if page == 'recruteur'
-        img.img-fluid(src='images/logo-recrut.jpg' alt='logo')
+        img.img-fluid(src='/images/logo-recrut.jpg' alt='logo')
       else
-        img.img-fluid(src='images/wny-logo.jpg' alt='logo')
+        img.img-fluid(src='/images/wny-logo.jpg' alt='logo')
       if page == "developpeur"
           a.navbar-recruteur(href='/recruteur')
             span(data-hover='RECRUTEUR') RECRUTEUR
