--- a/views/page_emploi.pug
+++ b/views/page_emploi.pug
@@ -3,7 +3,7 @@ extends layout
 block content
     header
         include nav.pug
-    body(class=bodyClass)
+    body
         h2.titre_missions retrouvez ici nos dernières missions
         include annonce_emploi.pug
     footer
