ajout tinymce dans ajout article

--- a/views/modal_ajout_blog.pug
+++ b/views/modal_ajout_blog.pug
@@ -17,7 +17,7 @@ div.modal.modal-id(id='modalAjoutBlog')
               input#titreAdd.form-control(type='text')
             .form-group
               label Contenu
-              textarea#contAdd.form-control( name='contentAdd')
+              textarea#contAdd.form-control.mceEditor( name='contentAdd')
             .form-group
               label Images
               input#imgAdd.form-control(type='file')
