correction bug modal ajout modif

--- a/views/modal_ajout_ba.pug
+++ b/views/modal_ajout_ba.pug
@@ -1,4 +1,4 @@
-div.modal.modal-id(id='modalAjoutBa')
+div.modal.modal-id.modal-ajout(id='modalAjoutBa')
   .modal-dialog
       .modal-content
         .modal-header
