--- a/views/modal_ajout_blog.pug
+++ b/views/modal_ajout_blog.pug
@@ -1,4 +1,4 @@
-div.modal.modal-id(id='modalAjoutBlog')
+div.modal.modal-id.modal-ajout(id='modalAjoutBlog')
   .modal-dialog
       .modal-content
         .modal-header
