--- a/views/modal_ajout_offres.pug
+++ b/views/modal_ajout_offres.pug
@@ -1,4 +1,4 @@
-div.modal.modal-id(id='modalAjoutMission')
+div.modal.modal-id.modal-ajout(id='modalAjoutMission')
   .modal-dialog
       .modal-content
         .modal-header
