--- a/views/modal_ajout_collab.pug
+++ b/views/modal_ajout_collab.pug
@@ -1,4 +1,4 @@
-div.modal.modal-id(id='modalAjoutCollab')
+div.modal.modal-id.modal-ajout(id='modalAjoutCollab')
   .modal-dialog
       .modal-content
         .modal-header
