--- a/views/modal_ajout_contact.pug
+++ b/views/modal_ajout_contact.pug
@@ -1,4 +1,4 @@
-div.modal.modal-id(id='modalAjoutContact')
+div.modal.modal-id.modal-ajout(id='modalAjoutContact')
   .modal-dialog
       .modal-content
         .modal-header
